# mmd_agent

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  codecov.yml  config.yaml  example_config.yaml  example_config_dmci.yaml  example_config_unsent_mmd.yaml  product-events-reader.creds  pytest.ini  requirements.txt  script.py  setup.cfg  test_script.py
.github/workflows/: main.yml  pytest.yml
container/: Dockerfile  README.md  config.yaml
container/agent/: Dockerfile
container/handler/: Dockerfile  README.md
mmd_agent/: .coverage  __init__.py  agent.py  config.py  handler.py
tests/: .coverage  config.yaml  conftest.py  test_agent.py  test_config.py  test_handler.py
