[metadata]
name = mmd_agent
version = attr: mmd_agent.__version__
author = MET Norway
author_email = servicedesk@met.no
description = MMD subscriber agent
url = https://github.com/metno/mmd_agent
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
license = Apache 2.0
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Atmospheric Science
project_urls =
    Source Code =https://github.com/metno/mmd_agent

[options]
python_requires = >=3.7
include_package_data = True
packages = find:
install_requires =
    requests>=2.22
    pyyaml>=5.1

[options.data_files]
usr/share/doc/mmd_agent =
  README.md

[bdist_wheel]
universal = 0

[flake8]
ignore = E221,E226,E228,E241
max-line-length = 99